Bug 292687 - File size is not shown in status bar
Summary: File size is not shown in status bar
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-28 13:59 UTC by Victor Varvaryuk
Modified: 2012-02-03 21:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments
File size is not shown in the status bar (83.52 KB, image/png)
2012-01-28 13:59 UTC, Victor Varvaryuk
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Victor Varvaryuk 2012-01-28 13:59:16 UTC
Created attachment 68269 [details]
File size is not shown in the status bar

Version:           2.0 (using KDE 4.8.0) 
OS:                Linux

File size is not shown in status bar

Reproducible: Always

Steps to Reproduce:
Open a folder in Dolphin. Point mouse cursor to a file

Actual Results:  
File name is shown in the status bar

Expected Results:  
File size should also be shown in the status bar
Comment 1 Peter Penz 2012-01-28 18:35:03 UTC
Thanks for the report. Changed it from "wishlist" to "normal" as this was available in older Dolphin versions...
Comment 2 Peter Penz 2012-02-03 21:32:25 UTC
Git commit 73e4324c25813486568c122a8ba9068350262774 by Peter Penz.
Committed on 03/02/2012 at 22:31.
Pushed by ppenz into branch 'KDE/4.8'.

Show file size when hovering an item
FIXED-IN: 4.8.1

M  +1    -6    dolphin/src/dolphinviewcontainer.cpp

http://commits.kde.org/kde-baseapps/73e4324c25813486568c122a8ba9068350262774
Comment 3 Peter Penz 2012-02-03 21:32:58 UTC
Git commit 73d31932b2410520cbbfa28d7b7b2154cdfd39c4 by Peter Penz.
Committed on 03/02/2012 at 22:31.
Pushed by ppenz into branch 'master'.

Show file size when hovering an item
FIXED-IN: 4.8.1

M  +1    -6    dolphin/src/dolphinviewcontainer.cpp

http://commits.kde.org/kde-baseapps/73d31932b2410520cbbfa28d7b7b2154cdfd39c4