Show file size when hovering an item

BUG: 292687
FIXED-IN: 4.8.1